Added section, acknowledgements

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -64,8 +64,33 @@ I dati vengono ricevuti con un codice di autorizzazione e vengono automaticament
 
 Il montaggio del video, nonché idea,  è stato realizzato grazie al prezioso aiuto di uno dei ragazzi che ha preso parte al progetto: Lorenza Dellapiana.
 Il video è stato girato nei locali sia interni che esterni della scuola in cui alcuni studenti del programma hanno spiegato le varie vicissitudini e passaggi che li hanno portato fino alla fine di questa esperienza. Il video è particolarmente rivolto alle classi del biennio sempre per motivi didattici ma anche per invogliarli a prendere parte a progetti come questo.
+\section{Posizione}
+L' \emph{Aula del Cielo} è un progetto PCTO dell’anno scolastico 2020/2021, ideato da due docenti di scienze del liceo prof. Claudia Abrigo e prof. Loredana Ercolini, a cui hanno partecipato venti studenti delle classi terze e quarte.\\
+Obiettivo del progetto è stato realizzare  nel giardino interno della scuola una zona dedicata alla misura di fenomeni atmosferici e astronomici, una vera “Aula del Cielo”. \\
+L’aiuola del giardino è diventata una rosa dei venti, sulle pareti dell’edificio sono state costruite due meridiane, decorate con l’aiuto della professoressa Barale, e diversi orologi solari e camere stenopeiche sono ora a disposizione per osservazioni e misure.\\
+Nell’\emph{Aula del cielo} sarà anche collocata la stazione meteo da noi realizzata per la raccolta di dati atmosferici ed ambientali.
 
 \section{Open Source}
 Tutto il codice del progetto è open source e pubblicato al seguente link\\
 \url{https://github.com/MatMasIt/weatherStation}
+\pagebreak
+\renewcommand{\abstractname}{Riconosimenti}
+\begin{center}
+\begin{abstract}
+Un sincero ringraziamento va a:\\
+\textbf{Docenti}\\
+ prof. Claudia Abrigo, Scienze\\
+ prof. Loredana Ercolini, Scienze\\
+ prof. Daniela Genta, Matematica e Fisica\\
+ prof. Andrea Piccione, Matematica e Fisica\\
+\textbf{Studenti}\\
+Leonardo Agnoletto, 4G\\
+Luca Savio Biello, 4G\\
+Lorenzo Dellapiana, 4G\\
+Arsildo Gjoka, 4G\\
+Gaia Gnecchi, 5D\\
+Mattia Mascarello, 5E\\
+Elia Taliano, 4G
+\end{abstract}
+\end{center}
 \end{document}
