Changed author format

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -12,7 +12,7 @@
 \title{%
   Progetto PCTO ``Aula del Cielo" \\
   \large Cocito Weather Station}
-\author{Lorenzo Dellapiana, Mattia Mascarello, Luca Biello}
+\author{Lorenzo Dellapiana\and Mattia Mascarello\and Luca Biello}
 \date{Agosto 2021}
 \renewcommand*\contentsname{Indice}
 \begin{document}
