Tried to fix image path

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -46,12 +46,12 @@ Questi dati, aggregati a quelli forniti dal SenseHat sono salvati nella memoria 
 \subsection{I sensori}
 Alla scheda \emph{Arduino} troviamo collegati 3 sensori:
 \begin{center}
-\includegraphics[]{images/FC22.png}\\
+\includegraphics[]{FC22.png}\\
 \caption{\emph{FC22}}
 \end{center}
 \emph{FC22}: Il sensore \emph{FC22} è responsabile della raccolta dati relativa a fumo e vapori infiammabili (ovviamente presenti nell’aria). Il risultato mostrato è espresso in ppm ovvero parti per milione: microgrammi (di una determinata sostanza) su metro cubo ($\frac{\mu g}{m^3}$).
 \begin{center}
-\includegraphics[]{images/sds011.jpg}\\
+\includegraphics[]{sds011.jpg}\\
 \caption{\emph{SDS011}}
 \end{center}
 \emph{SDS011}: Per ultimo abbiamo il rilevatore di polveri sottili, che ci restituisce il risultato sempre in microgrammi su metro cubo.\\
