--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -1,5 +1,5 @@
 \documentclass{article}
-% Mattia Mascarello, 2021
+% Mattia Mascarello, 2021, MIT
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
