Fixed credits typo

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -77,7 +77,7 @@ Nell’\emph{Aula del cielo} sarà anche collocata la stazione meteo da noi real
 Tutto il codice del progetto è open source e pubblicato al seguente link\\
 \url{https://github.com/MatMasIt/weatherStation}
 \pagebreak
-\renewcommand{\abstractname}{Riconosimenti}
+\renewcommand{\abstractname}{Riconoscimenti}
 \begin{center}
 \begin{abstract}
 Un sincero ringraziamento va a:\\
