--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -65,7 +65,7 @@ I dati sono elaborati in grafici a linee che spaziano nel giorno corrente, in qu
 I dati vengono ricevuti con un codice di autorizzazione e vengono automaticamente archiviate, disponibili per l'elaborazione grafica e la ricerca ed esportazione in diversi formati.
 \section{Video}
 
-Il montaggio del video, nonché idea,  è stato realizzato grazie al prezioso aiuto di uno dei ragazzi che ha preso parte al progetto: Lorenza Dellapiana.
+Il montaggio del video, nonché idea,  è stato realizzato grazie al prezioso aiuto di uno dei ragazzi che ha preso parte al progetto: Lorenzo Dellapiana.
 Il video è stato girato nei locali sia interni che esterni della scuola in cui alcuni studenti del programma hanno spiegato le varie vicissitudini e passaggi che li hanno portato fino alla fine di questa esperienza. Il video è particolarmente rivolto alle classi del biennio sempre per motivi didattici ma anche per invogliarli a prendere parte a progetti come questo.
 \section{Posizione}
 L' \emph{Aula del Cielo} è un progetto PCTO dell’anno scolastico 2020/2021, ideato da due docenti di scienze del liceo prof. Claudia Abrigo e prof. Loredana Ercolini, a cui hanno partecipato venti studenti delle classi terze e quarte.\\
