Added mention to java app to tex

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -43,6 +43,8 @@ Come detto in precedenza, il progetto si compone di due schede.
 \subsubsection{Il software}
 Il raspberry è dotato di un programma in python (v 3.8) che ottiene i dati di qualità dell'aria grazie ad un collegamento seriale USB con l'arduino, che li fornisce su richiesta.\\
 Questi dati, aggregati a quelli forniti dal SenseHat sono salvati nella memoria interna, mostrati sulla matrice led e accodati al caricamento sul server.
+\subsection{Lo schermo}
+Uno schermo posizionato all'esterno della stazione mostra dati storici ed in tempo reale grazie a un applicativo in java apposito
 \subsection{I sensori}
 Alla scheda \emph{Arduino} troviamo collegati 3 sensori:
 \begin{figure}[h!]
