Added go downloader (we are planning a separate display)

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -3,7 +3,7 @@
 \usepackage{hyperref}
 \usepackage[utf8]{inputenc}
 \usepackage{graphicx}
-\graphicspath{ {documents/images/} }
+\graphicspath{ {images/} }
 \def\blankpage{%
       \clearpage%
       \thispagestyle{empty}%
