Added collaborator to thanking sections

--- a/documents/ws.tex
+++ b/documents/ws.tex
@@ -95,7 +95,8 @@ Lorenzo Dellapiana, 4G\\
 Arsildo Gjoka, 4G\\
 Gaia Gnecchi, 5D\\
 Mattia Mascarello, 5E\\
-Elia Taliano, 4G
+Sofia Pressenda, 4G,\\
+Elia Taliano, 4G\\
 \end{abstract}
 \end{center}
 \end{document}
